--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Pragya Mishra
 
 # Short bio or description (displayed in the header)
-description: Software Engineer
+description: Personal Blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/pragya-mishra/pragya-mishra.github.io/blob/master/images/profile.png?raw=true
