added insta and linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ footer-links:
   facebook:
   flickr:
   github:
-  instagram:
-  linkedin:
+  instagram: pragya.mishraa
+  linkedin: pragya-mishra
   pinterest:
   rss: ok # just type anything here for a working RSS icon
   twitter: # nothing
