--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ name: Pragya Mishra
 
 # Short bio or description (displayed in the header)
 description: Personal Blog
+excerpt: Collection of anecdotes, essays, and book summaries
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/pragya-mishra/pragya-mishra.github.io/blob/master/images/profile.jpg?raw=true
