--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Pragya Mishra
 description: Personal Blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/pragya-mishra/pragya-mishra.github.io/blob/master/images/profile.jpg?raw=true
+avatar: https://github.com/pragya-mishra/pragya-mishra.github.io/blob/master/images/profile.jpeg?raw=true
 
 #
 # Flags below are optional
